# GENETIC-TRADER-ENGINE-VER2

./: .gitattributes  .gitignore  .replit  app.py  install_final.py  pyproject.toml  pytest.ini  replit.md
.github/workflows/: perf.yml
apps/: streamlit_app.py
configs/: config.aggressive.yaml  universe_quick.json
data/: 1000PEPEUSDT_15m.csv  1000SHIBUSDT_5m.csv  AAVEUSDT_15m.csv  ADAUSDT_15m.csv  ADAUSDT_5m.csv  ARBUSDT_15m.csv  ARBUSDT_5m.csv  ASTERUSDT_15m.csv  ASTERUSDT_3m.csv  ASTERUSDT_5m.csv  ATUSDT_3m.csv  AUCTIONUSDT_15m.csv  AUCTIONUSDT_3m.csv  AUCTIONUSDT_5m.csv  AVAXUSDT_15m.csv  AVNTUSDT_15m.csv  AVNTUSDT_5m.csv  BCHUSDT_5m.csv  BEATUSDT_15m.csv  BEATUSDT_3m.csv  BNBUSDT_5m.csv  BREVUSDT_15m.csv  BTCUSDT_15m.csv  BTCUSDT_5m.csv  CCUSDT_15m.csv  CCUSDT_3m.csv  CHZUSDT_5m.csv  CRVUSDT_15m.csv  CRVUSDT_3m.csv  CRVUSDT_5m.csv  CYBERUSDT_15m.csv  CYSUSDT_15m.csv  DOGEUSDT_15m.csv  DOGEUSDT_5m.csv  DOTUSDT_15m.csv  DOTUSDT_3m.csv  DOTUSDT_5m.csv  ENAUSDT_15m.csv  ENAUSDT_5m.csv  FARTCOINUSDT_15m.csv  (+64 more)
docs/: optimization.md
ga_trader/: __main__.py  config.py  utils.py
ga_trader/backtest/: engine.py  export.py
ga_trader/commands/: data.py  export_cmd.py  ga_cmd.py  indicators_cmd.py  universe.py
ga_trader/fitness/: evaluator.py  metrics.py
ga_trader/ga/: genome.py  nsga2.py  runner.py
ga_trader/indicators/: registry.py
ga_trader/parity/: tv_csv.py
ga_trader/providers/: __init__.py  binance.py  finrl.py
runs/: universe.json
tests/: test_multiprocess.py  test_performance.py
tools/: cleanup.py  run_bench.py  run_profile.py
(+169 files in other folders)
