[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "streamlit>=1.52.2",
    "typer>=0.21.0",
]

[project.optional-dependencies]
numba = ["numba>=0.57.0"]
finrl = ["finrl", "yfinance", "ta", "pandas_ta"]

